# StudyDemo

./: .gitignore  README.md
Project/: CMakeLists.txt  cmake_common.txt
Project/MyDemo/: MyDemo.sln
Project/MyDemo/DemoBasic/: DemoBasic.vcxproj  DemoBasic.vcxproj.filters
Project/fun/: CMakeLists.txt  my_template.cpp  source.cpp
Project/include/: header.h  my_operator.h  my_template.h  my_thread.h
Project/src/: CMakeLists.txt  main.cpp  main.cpp.orig
Project/ut/: CMakeLists.txt  main.cpp  my_template_ut.cpp
Project/ut/include/: my_template_ut.h
Project2/: CMakeLists.txt
Project2/src/: main.cpp
Project3/: cmake_common.txt
Project3/fun/: CMakeLists.txt  source.cpp
Project3/src/: CMakeLists.txt
